# pico-balls

./: CMakeLists.txt  README.md  help.txt  img_to_16bit_col.py  run_project.sh
balls/: CMakeLists.txt  balls.c  cmake_install.cmake  main.c
